@@ -70,6 +70,7 @@
     <File name="./Banter/NotificationData.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/UriList.cs" subtype="Code" buildaction="Compile" />
     <File name="./data/Themes/MessageStyles" subtype="Directory" buildaction="Compile" />
+    <File name="./Banter/SidebarTextButton.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
