@@ -1,3 +1,10 @@
+2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter.mdp, Banter/SidebarTextButton.cs, Banter/Makefile.am: Added
+	  SidebarTextButton
+	* Banter/GroupWindow.cs, Banter/PersonCard.cs, Banter/PersonView.cs:
+	  Added button to remove people
+
 2007-08-03  Brady Anderson <brady.anderson@gmail.com> 
 
 	* Banter/Account.cs: added method to invite a remote user
